--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -186,14 +186,14 @@ est_date4 <- dmy(01042024)
               "dates with the Health Board and are expecting these to be rectified in future submissions.*"), TRUE ~ paste0(""))
   
      # Data quality notes - lanarkshire
-  lan_date <- dmy(01042024)
+  lan_date <- dmy(01042025)
 
   lan_text <-  
     case_when(hb == "NHS Lanarkshire" & sel_fy == extract_fin_year(lan_date) ~
       paste0(" ",
-             "**Please note:** ",
-              "*PHS have identified two records submitted by NHS Lanarkshire ", 
-              "for 2024/25 that show inconsistent dates. The reported dates resulted in these records ",
+           "**Please note:** ",
+              "*PHS have identified one record submitted by NHS Lanarkshire ", 
+              "for 2025/26 that shows inconsistent dates. The reported dates resulted in this record ",
               "showing as having met the standard. PHS have queried the ", 
               "dates with the Health Board and are expecting these to be rectified in future submissions.*"),  TRUE ~ paste0(""))
 
