--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -162,14 +162,14 @@ est_date4 <- dmy(01042024)
    
     
     # Data quality notes - inconsistent first contact dates
-   fc_date <- dmy(01042024)
+   fc_date <- dmy(01042025)
       
    fc_text <- 
     case_when(sel_fy == extract_fin_year(fc_date) ~
               paste0(" ", 
               "**Please note:** ",
-              "*PHS have identified two records submitted by NHS Lanarkshire ", 
-              "for 2024/25 that show inconsistent dates. The reported dates resulted in these records ",
+              "*PHS have identified one record submitted by NHS Lanarkshire ", 
+              "for 2025/26 that shows inconsistent dates. The reported dates resulted in this record ",
               "showing as having met the standard. PHS have queried the ", 
               "dates with the Health Board and are expecting these to be rectified in future submissions.*"), 
             TRUE ~ paste0(""))
