--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -243,7 +243,7 @@ Row
 
 <span style="color:red"> **MANAGEMENT INFORMATION: FOR LIMITED INTERNAL DISTRIBUTION AND NOT FOR PUBLIC RELEASE.** </span>
 
-This page includes rates of the number of people referred to PDS per 10,000 population (65 years and over). Note that for financial year 2024/25 and 2025/26 the Mid-2023 populations are used as this is the latest available estimate.<!-- UPDATE when new population estimates are available / when new financial year begins --> *See the [Glossary](#glossary) for more details.*
+This page includes rates of the number of people referred to PDS per 10,000 population (65 years and over). Note that for financial year *2024/25* and *2025/26* the Mid-2023 populations are used as this is the latest available estimate.<!-- UPDATE when new population estimates are available / when new financial year begins --> *See the [Glossary](#glossary) for more details.*
 
 The Integration Authority Area and Health Board tabs include a chart and table showing the rate for each geographical area by financial year.  
 
