--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -87,9 +87,10 @@ est_date4 <- dmy(01042024)
   ac_date1 <- dmy(01042019)
   ac_date2 <- dmy(01042020)
   ac_date3 <- dmy(01042025)
-
-  ac_text <-  
-    case_when(sel_fy == extract_fin_year(ac_date1) | sel_fy == extract_fin_year(ac_date2) ~
+  
+    ac_text <-  
+    case_when(hb == "NHS Grampian" & sel_fy == extract_fin_year(ac_date1) |
+              hb == "NHS Grampian" &sel_fy == extract_fin_year(ac_date2) ~
       paste0(" ",
              "**Please note:** ",
              "*Aberdeen City Health & Social Care Partnership changed ",
@@ -97,7 +98,7 @@ est_date4 <- dmy(01042024)
              "This change in model, and process of receiving referrals and recording, ",
              "resulted in data quality issues for financial years 2019/20 and 2020/21. ",
              "This should be taken into account when interpreting figures for Aberdeen City and NHS Grampian.*"),
-            sel_fy == extract_fin_year(ac_date3) ~
+             hb == "NHS Grampian" & sel_fy == extract_fin_year(ac_date3) ~
         paste0(" ",
                "**Please note:** ",
                 "*Due to staff absence Aberdeen City was unable to submit any data for ",
